# advent-of-code

./: .gitignore  README.md  create.rs  justfile
.template/: Cargo.toml  justfile
.template/benches/: all.rs  part_1.rs  part_2.rs
.template/src/: lib.rs  part_2.rs
2022/day-01/src/: main.rs
2022/day-02/: Cargo.toml
2022/day-02/src/: lib.rs  main.rs
2022/day-03/src/: lib.rs
2022/day-04/: cargo.toml
2022/day-04/src/: lib.rs
2022/day-05/src/: lib.rs
2022/day-06/: cargo.toml
2022/day-06/src/: lib.rs
2022/day-09/src/: lib.rs
2022/day-10/src/: lib.rs
2022/day-13/src/: _lib.rs
2022/day-15/: input.txt
2022/day-16/: cargo.toml
2022/day-17/src/: lib.rs
2022/day-18/: cargo.toml
2022/day-19/: cargo.toml
2022/day-21/: cargo.toml
2022/day-24/: cargo.toml
2023/: Justfile
2023/day-01/: Cargo.toml  cargo.toml
2023/day-01/benches/: all.rs
2023/day-01/src/: lib.rs
2023/day-02/: Cargo.toml
2023/day-02/src/: lib.rs
2023/day-03/: Cargo.toml
2023/day-03/benches/: all.rs  divan.rs
2023/day-03/src/: lib.rs
2023/day-04/benches/: all.rs
2023/day-04/src/: lib.rs
2023/day-05/src/: lib.rs
2023/day-06/src/: lib.rs
2023/day-07/benches/: all.rs
2023/day-07/src/: part_1.rs  part_2.rs
2023/day-08/: Cargo.toml
2023/day-08/src/: part_1.rs  part_2.rs
2023/day-09/src/: lib.rs
2023/day-10/src/: part_1.rs  part_2.rs
2023/day-11/src/: part_1.rs  part_2.rs
2023/day-12/: Cargo.toml  justfile
2023/day-12/src/: part_1.rs  part_2.rs
2023/day-13/src/: part_1.rs  part_2.rs
2023/day-14/: Cargo.toml
2023/day-14/benches/: all.rs
2023/day-14/src/: lib.rs  part_1.rs  part_2.rs
2023/day-15/: Cargo.toml
2023/day-15/src/: lib.rs  part_1.rs  part_2.rs
2023/day-16/: res.txt
2023/day-16/src/: part_1.rs  part_2.rs
2023/day-17/: Cargo.toml  justfile
2023/day-17/benches/: part_1.rs
2023/day-17/src/: lib.rs  part_1.rs  part_2.rs
2023/day-18/: Cargo.toml  res.txt
2023/day-18/src/: part_1.rs  part_2.rs
2023/day-19/: Cargo.toml
2023/day-19/src/: part_1.rs  part_2.rs
2023/day-20/: Cargo.toml
2023/day-20/src/: part_1.rs  part_2.rs
2023/day-21/: Cargo.toml
2023/day-21/src/: lib.rs  part_1.rs  part_2.rs
2023/day-22/: Cargo.toml
2023/day-22/src/: part_1.rs  part_2.rs
2023/day-23/: Cargo.toml  input.dot  justfile  sample.dot  sample2.txt
2023/day-23/src/: part_1.rs  part_2.rs
2023/day-24/: Cargo.toml
2023/day-24/src/: lib.rs  part_1.rs  part_2.rs  part_2a.rs  part_2b.rs
2023/day-25/: Cargo.toml  build.rs  justfile
2023/day-25/src/: part_1.rs
2023/template/: Cargo.toml
2023/template/benches/: part_2.rs
2023/template/src/: part_1.rs
2024/day-01/: Cargo.toml
2024/day-01/src/: part_1.rs  part_2.rs
2024/day-02/: build.rs
2024/day-02/benches/: part_2.rs
2024/day-02/src/: part_1.rs  part_2.rs
2024/day-03/: Cargo.toml
2024/day-03/src/: lib.rs  part_1.rs  part_2.rs
2024/day-04/src/: lib.rs  part_1.rs  part_2.rs
2024/day-05/: Cargo.toml
2024/day-05/src/: part_1.rs  part_2.rs
2024/day-06/src/: part_1.rs  part_2.rs
2024/day-07/src/: part_1.rs  part_2.rs
2024/day-08/: Cargo.toml
2024/day-17/: Cargo.toml
2024/day-20/: Cargo.toml
2024/day-21/: Cargo.toml
2024/day-23/: Cargo.toml
2024/day-24/: Cargo.toml
2024/template/: Cargo.toml
2025/: Cargo.toml  day4
2025/src/: day-04.c
day-01/: Cargo.toml
day-02/src/: lib.rs
day-03/src/: lib.rs
day-05/: cargo.toml
day-05/src/: lib.rs
day-06/src/: lib.rs
day-07/src/: lib.rs
day-08/: cargo.toml
day-08/src/: lib.rs
day-09/src/: lib.rs
day-10/src/: lib.rs
day-11/: cargo.toml
day-11/src/: lib.rs
day-12/: cargo.toml
day-12/src/: lib.rs
day-13/src/: lib.rs
day-14/: cargo.toml
day-14/src/: lib.rs
day-15/src/: lib.rs
day-16/src/: lib.rs
day-17/src/: lib.rs
day-18/src/: lib.rs
day-19/src/: lib.rs
day-20/src/: lib.rs
day-21/src/: lib.rs
day-22/: sample2.txt
day-22/src/: lib.rs
day-23/: cargo.toml
day-23/src/: lib.rs
day-24/src/: lib.rs
day-25/src/: lib.rs
day-xx/: cargo.toml
day-xx/src/: lib.rs
template/src/: lib.rs
(+43 files in other folders)
