[package]
name = "advent-of-code"
version = "0.0.0"
authors = ["Samuel Crisobal"]
edition = "2021"
rust-version = "1.74.0"
license = "MIT"
description = "Non-competitive Advent of Code"
repository = "github.com/scristobal/advent-of-code"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"


[dev-dependencies]
criterion = { version = "0.5" }

[[bench]]
name = "all"
harness = false


[toolchain]
channel = "nightly"
