[package]
name = "advent-of-code"
version = "0.0.0"
authors = ["Samuel Crisobal"]
edition = "2021"
rust-version = "1.74.0"
license = "MIT"
description = "Non-competitive Advent of Code"
repository = "github.com/scristobal/advent-of-code"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
itertools = "0.12.0"
nom = "7.1.3"


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
divan = "0.1.3"


[[bench]]
name = "divan"
harness = false

[[bench]]
name = "criterion"
harness = false
