[package]
name = "advent-of-code"
version = "0.0.1"
authors = ["Samuel Crisobal"]
edition = "2021"
rust-version = "1.83.0"
license = "MIT"
description = "Non-competitive Advent of Code"
repository = "github.com/scristobal/advent-of-code"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
itertools = "0.13.0"
scanf = "1.2.1"


[dev-dependencies]
criterion = { version = "0.5.1" }


[build-dependencies]
reqwest = { version = "0.12.9", features = ["blocking"] }
anyhow = "1.0.93"
dotenv = "0.15.0"


[[bench]]
name = "part_1"
harness = false

[[bench]]
name = "part_2"
harness = false


[toolchain]
channel = "nightly"
